--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "navneet-aur-backend",
   "version": "1.0.0",
   "description": "create first project through chai aur backend",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "chai",
@@ -12,5 +13,8 @@
     "backend"
   ],
   "author": "Navneet Patel",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
